# pp2023

./: .gitignore  pp2023_conda.yml  pyproject.toml
src/pp2023/: bernstein.py  cli.py  dataset.py  distribution.py  lightning.py  scheduler.py  util.py
src/pp2023/aqueduct/: config.yaml  extension.py  inspect_predictions.ipynb  tasks.py
src/pp2023/aqueduct/notebooks/: view_preds.ipynb
src/pp2023/cli/: base.py  predict.py  train.py
src/pp2023/conf/: train.yaml
src/pp2023/conf/ex/: distribution_choice_linear.yaml  distribution_choice_mlp.yaml  emos.yaml  ens10_metar_emos.yaml  ens10_metar_emos_quantile.yaml  ens10_metar_mlp.yaml  ens10_metar_mlp_quantile.yaml  ens10_metar_transformer.yaml  ens10_mlp_deterministic.yaml  gdps_linear.yaml  gdps_mlp.yaml  gdps_mlp_deterministic.yaml  gdps_mlp_normal.yaml  gdps_mlp_quantile.yaml  gdps_step_partition.yaml  gdps_transformer.yaml  linear.yaml  paper_mlp_noprebatch.yaml  paper_mlp_noprebatch_partition.yaml  paper_n_members.yaml  paper_step_condition.yaml  paper_step_partition.yaml  paper_table_linear.yaml  paper_table_mlp.yaml  paper_transformer.yaml  transformer_noprebatch.yaml  v02_lin.yaml  v04_linear.yaml  v04_mlp.yaml  v04_mlp_ens10_members.yaml  v04_mlp_partition.yaml
src/pp2023/conf/logging/: default.yaml
src/pp2023/conf/mlflow/: dev.yaml  full.yaml
src/pp2023/conf/site/: inriamac.yaml  jeanzay.yaml
src/pp2023/distribution/: add_mult_normal.py  base.py  distribution.py  mapping.py
src/pp2023/model/: distribution.py  emos.py  linear.py  membermember.py  mlp.py  transformer.py
test/: test_distribution.py
(+53 files in other folders)
