[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pp2023"
version = "20230628"
dependencies = [
    "hydra-core",
    "nc-time-axis",
    "torch",
    "pytorch_lightning",
]

[project.optional-dependencies]
dev = ["isort", "black", "nb-clean"]
eddie = ["eddie"]

[tool.black]
line-length = 88
target-version = ['py311']

[project.scripts]
pp2023_train = "pp2023.cli.train:train_cli"
pp2023_predict = "pp2023.cli.predict:predict_cli"

[tools.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points.aqueduct_modules]
pp2023 = "pp2023.aqueduct.extension:task_modules"

[project.entry-points.aqueduct_config]
pp2023 = "pp2023.aqueduct.extension:aq_config"